@@ -1,13 +1,4 @@
 To repair: 
-    some User's memberfunctions erroneously report size_t rather than
-    string returntypes. (done)
-
-    ConfigFile's manpage sometimes uses Configfile rather than ConfigFile
-    (done)
-
-    Process: explain that system() does imply start() and provide illustration
-    (as used in, e.g., the remailer)
-    explain that not mentioning IOMode for a stream avoids redirecting it
 
     X2a:
         X2a may also need a toString() member. Incomplete manpage section:
@@ -15,19 +6,8 @@ To repair:
        &x2a)) This conversion operator inserts the converted value in the  x2a
        parameter into the provided ostream.
 
-    Log's manpage contains a typo: UNIT_MAX instead of UINT_MAX
-
     Msg's open function should also set the opening mode
 
-added:
-    ConfigFile:findKey(string key, size_t idx = 1): key is a pattern and by
-        default its first pattern element is returned.
-    
-    Process::close(), manpage description: TO DO
-    Process: add member to inspect the currently stored command text
-
-    DateTime: TriVal's UNKNOWN value is now -1, rfc2822() correctly represents
-    the difference between UTC and local time, also considering DST.
 --
 
 
