@@ -1,0 +1,5 @@
+#include "configfile.ih"
+
+ConfigFile::
+{
+}
