@@ -1,0 +1,5 @@
+#include "datetime.ih"
+
+DateTime::
+{
+}
