@@ -83,7 +83,7 @@ from this class.
     itb(std::ostream &level(size_t useLevel))
         This member defines a log-level. Messages will be inserted into
 the stream when tt(useLevel) is equal to or exceeds the level set by
-bf(setLevel()). The maximum level which can be selected is bf(UNIT_MAX). If
+    bf(setLevel()). The maximum level which can be selected is bf(UINT_MAX). If
 not even such messages should be inserted into the bf(ostream), then the
 stream should be deactivated, using bf(off()), see below. The selected level
 remains active until redefined. Alternatively, the bf(FBB::level) manipulator
