@@ -31,21 +31,21 @@ tt(User::verify()) member (see below).
 
 manpagesection(MEMBER FUNCTIONS)
     itemization(
-    itb(size_t groupid() const):nl()
+    itb(size_t groupid() const)
         Returns the user's group-id.
-    itb(std::string homedir() const):nl()
+    itb(std::string homedir() const)
         Returns the user's home directory (including a trailing tt(/)).
-    itb(std::string name() const):nl()
+    itb(std::string name() const)
         Returns the user's user-name.
-    itb(std::string password() const):nl()
+    itb(std::string password() const)
         Returns the user's encrypted password. But see also the bf(BUGS) \
         section. 
-    itb(std::string realname() const):nl()
+    itb(std::string realname() const)
         Returns the user's real name, as listed in the tt(/etc/passwd)'s \
         em(gecos) field.
-    itb(std::string shell() const):nl()
+    itb(std::string shell() const)
         Returns the user's shell.
-    itb(size_t userid() const):nl()
+    itb(size_t userid() const)
         Returns the user's user-id.
     itb(void verify() const)
         This operator throws an tt(Errno) exception if the bf(User)
