@@ -1,5 +1,16 @@
 bobcat (1.21.1) ISN
 
+  * Several man-pages were updated/modified (Config, Log, Process, User)
+
+  * Process: new members
+        close(): closes the parent's pipe to the child-process standard input
+                 stream 
+        str(): returns the content of the command string stored within the
+               object 
+
+  * DateTime: TriVal's UNKNOWN value was changed; rfc2822() correctly
+    represents the difference between UTC and local time, allowing for DST.
+
   * see TODO
 
 bobcat (1.20.1)
